--- a/headless_live.html
+++ b/headless_live.html
@@ -32,7 +32,8 @@
 		import { ParaHelper } from '/dist/paracharts.js';
 		const helper = new ParaHelper();
 		await helper.ready;
-    	await helper.loadManifest('/src/headless/bar-multi-manifest-48.json');
+		await helper.loadData('/src/headless/bar-multi-manifest-48.csv');
+    	await helper.loadManifest('/src/headless/bar-multi-manifest-48-external.json');
     	const content = helper.serializeChart();
     	const container = document.getElementById('content-container');
     	container.innerHTML = content;
