--- a/src/ai/ai.html
+++ b/src/ai/ai.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Headless demo -- ParaCharts</title>
+	<title>AI demo -- ParaCharts</title>
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 fill=%22green%22/><text y=%22.9em%22 font-size=%2290%22>📈</text></svg>">
 	<style>
 		:root {
@@ -77,7 +77,7 @@
 	<h1>@fizz/paracharts AI-enhanced Demo</h1>
   	<main>
     	<section id="content-container">
-				<para-chart-ai></para-chart-ai>
+				<para-chart-ai manifest="/src/ai/line-single-manifest-7.json"></para-chart-ai>
 			</section>
   	</main>
 </body>
