Fixed demos and merge issues

--- a/src/demo/ai/ai.html
+++ b/src/demo/ai/ai.html
@@ -73,11 +73,11 @@
 	</style>
 </head>
 <body>
-  	<script type="module" src="/src/ai/demo.ts"></script>
+  	<script type="module" src="/src/demo/ai/demo.ts"></script>
 	<h1>@fizz/paracharts AI-enhanced Demo</h1>
   	<main>
     	<section id="content-container">
-				<para-chart-ai manifest="/src/ai/line-single-manifest-7.json"></para-chart-ai>
+				<para-chart-ai manifest="/src/demo/ai/line-single-manifest-7.json"></para-chart-ai>
 			</section>
   	</main>
 </body>
