--- a/src/demo/headless/vite/headless.html
+++ b/src/demo/headless/vite/headless.html
@@ -73,7 +73,7 @@
 	</style>
 </head>
 <body>
-  	<script type="module" src="/src/headless/demo.ts"></script>
+  	<script type="module" src="/src/demo/headless/vite/demo.ts"></script>
 	<h1>@fizz/paracharts Headless Demo</h1>
   	<main>
     	<section id="content-container">
