--- a/src/demo/datatable/datatable-demo.html
+++ b/src/demo/datatable/datatable-demo.html
@@ -2,78 +2,127 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>Live Server Headless demo -- ParaCharts</title>
-	<link rel="icon"
-		href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 fill=%22green%22/><text y=%22.9em%22 font-size=%2290%22>📈</text></svg>">
-	<style>
-		:root {
-			--parachartsThemeColor: hsl(194, 28%, 45%);
-			--parachartsThemeColorLight: hsl(194, 28%, 85%);
-		}
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Live Server Headless demo -- ParaCharts</title>
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 fill=%22green%22/><text y=%22.9em%22 font-size=%2290%22>📈</text></svg>">
+  <style>
+    :root {
+      --parachartsThemeColor: hsl(194, 28%, 45%);
+      --parachartsThemeColorLight: hsl(194, 28%, 85%);
+    }
 
-		body {
-			font-family: 'Helvetica Neue', Arial, sans-serif;
-			color: #333;
-			font-weight: 300;
-		}
+    body {
+      font-family: 'Helvetica Neue', Arial, sans-serif;
+      color: #333;
+      font-weight: 300;
+    }
 
-		h1 {
-			position: fixed;
-			bottom: 0;
-			right: 0;
-			margin: 1rem;
-			font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-			font-style: italic;
-			font-weight: normal;
-			color: hsl(0, 0%, 40%);
-		}
-	</style>
+    h1 {
+      position: fixed;
+      bottom: 0;
+      right: 0;
+      margin: 1rem;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      font-style: italic;
+      font-weight: normal;
+      color: hsl(0, 0%, 40%);
+    }
+  </style>
 </head>
 
 <body>
-	<script type="module">
-		import { ParaChart } from '/dist/paracharts.js';
-	</script>
+  <script type="module">
+    import { ParaChart } from '/dist/paracharts.js';
+  </script>
 
-	<h1>@fizz/paracharts Live Server Headless Demo</h1>
+  <h1>@fizz/paracharts Live Server Headless Demo</h1>
 
-	<main>
-		<section id="content-container">
-			<para-chart type="pie">
-				<slot>
-					<table>
-						<caption>Division of energy in the Universe</caption>
-						<thead>
-							<tr>
-								<th>Kind of energy</th>
-								<th>Proportion</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>Dark Energy</td>
-								<td>73%</td>
-							</tr>
-							<tr>
-								<td>Dark Matter</td>
-								<td>23%</td>
-							</tr>
-							<tr>
-								<td>Nonluminous Matter</td>
-								<td>3.6%</td>
-							</tr>
-							<tr>
-								<td>Luminous Matter</td>
-								<td>0.4%</td>
-							</tr>
-						</tbody>
-					</table>
-				</slot>
-			</para-chart>
-		</section>
-	</main>
+  <main>
+    <section id="content-container">
+      <para-chart type="line">
+        <slot>
+          <table>
+            <caption>Distribution of GDP across economic sectors in China 2008 to 2018</caption>
+            <tr>
+              <td data-type="date" data-independent="true">Year</td>
+              <td data-type="number">Agriculture</td>
+              <td data-type="number">Industry</td>
+              <td data-type="number">Services</td>
+            </tr>
+            <tr>
+              <td>2008</td>
+              <td>10.73</td>
+              <td>47.45</td>
+              <td>41.82</td>
+            </tr>
+            <tr>
+              <td>2009</td>
+              <td>10.33</td>
+              <td>46.24</td>
+              <td>43.43</td>
+            </tr>
+            <tr>
+              <td>2010</td>
+              <td>10.1</td>
+              <td>46.72</td>
+              <td>43.19</td>
+            </tr>
+            <tr>
+              <td>2011</td>
+              <td>9.25</td>
+              <td>44.37</td>
+              <td>46.38</td>
+            </tr>
+            <tr>
+              <td>2012</td>
+              <td>9.4</td>
+              <td>45.3</td>
+              <td>45.3</td>
+            </tr>
+            <tr>
+              <td>2013</td>
+              <td>9.3</td>
+              <td>44</td>
+              <td>46.7</td>
+            </tr>
+            <tr>
+              <td>2014</td>
+              <td>8.7</td>
+              <td>43.3</td>
+              <td>48</td>
+            </tr>
+            <tr>
+              <td>2015</td>
+              <td>8.4</td>
+              <td>41.1</td>
+              <td>50.5</td>
+            </tr>
+            <tr>
+              <td>2016</td>
+              <td>8.1</td>
+              <td>40.1</td>
+              <td>51.8</td>
+            </tr>
+            <tr>
+              <td>2017</td>
+              <td>7.6</td>
+              <td>40.5</td>
+              <td>51.9</td>
+            </tr>
+            <tr>
+              <td>2018</td>
+              <td>7.2</td>
+              <td>40.7</td>
+              <td>52.2</td>
+            </tr>
+          </table>
+
+        </slot>
+      </para-chart>
+    </section>
+  </main>
 </body>
 
 </html>
