--- a/src/demo/datatable/line-multi-27.html
+++ b/src/demo/datatable/line-multi-27.html
@@ -1,50 +1,5 @@
-Year,2018,2017,2016,2015,2014,2013,2012,2011,2010,2009,2008
-Agriculture,7.2%,7.6%,8.1%,8.4%,8.7%,9.3%,9.4%,9.25%,10.1%,10.33%,10.73%
-Industry,40.7%,40.5%,40.1%,41.1%,43.3%,44%,45.3%,44.37%,46.72%,46.24%,47.45%
-Services,52.2%,51.9%,51.8%,50.5%,48%,46.7%,45.3%,46.38%,43.19%,43.43%,41.82%
-
-
 <table>
-    <caption>Division of energy in the Universe</caption>
-    <thead>
-        <tr>
-            <th>Year</th>
-            <th>Agriculture</th>
-            <th>Industry</th>
-            <th>Services</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>2018</td>
-            <td>7.2%</td>
-            <td>40.7%</td>
-            <td>52.2%</td>
-        </tr>
-        <tr>
-            <td>2017</td>
-            <td>7.6%</td>
-            <td>40.5%</td>
-            <td>51.9%</td>
-        </tr>
-        <tr>
-            <td>2016</td>
-            <td>8.1%</td>
-            <td>40.1%</td>
-            <td>51.8%</td>
-        </tr>
-        <tr>
-            <td>2015</td>
-            <td>8.4%</td>
-            <td>41.1%</td>
-            <td>50.5%</td>
-        </tr>
-    </tbody>
-</table>
-
-
-<table>
-  <caption>Division of energy in the Universe</caption>
+  <caption>Distribution of GDP across economic sectors in China 2008 to 2018</caption>
   <tr>
     <td data-type="date" data-independent="true">Year</td>
     <td data-type="number">Agriculture</td>
@@ -118,4 +73,3 @@ Services,52.2%,51.9%,51.8%,50.5%,48%,46.7%,45.3%,46.38%,43.19%,43.43%,41.82%
     <td>52.2</td>
   </tr>
 </table>
-  
