--- a/src/demo/datatable/graphing-demo.html
+++ b/src/demo/datatable/graphing-demo.html
@@ -30,70 +30,16 @@
             color: hsl(0, 0%, 40%);
         }
     </style>
-    <script src="../../../node_modules/mathjs/lib/browser/math.js" type="text/javascript"></script>
 </head>
 
 <body>
     <h1>@fizz/paracharts Live Server Headless Demo</h1>
     <script type="module">
-        var container = document.querySelector('#data');
-        console.log(container)
-        var table = document.createElement("table");
-        var trVar = document.createElement("tr");
-        var xVar = document.createElement("td");
-        var yVar = document.createElement("td");
-        xVar.innerHTML = "X values";
-        yVar.innerHTML = "Y values";
-        xVar.setAttribute("data-type", "number");
-        yVar.setAttribute("data-type", "number");
-        trVar.append(xVar);
-        trVar.append(yVar);
-        table.append(trVar);
-        var input = math.parse(window.prompt("Input expression"));
-        var simplified = math.simplify(input);
-        console.log(simplified.toString());
-        var xVals = [];
-        var yVals = [];
-        const points = 100
-        const xBounds = 10
-        for (var i = 0; i < points; i++) {
-            var tr = document.createElement("tr");
-            var td1 = document.createElement("td");
-            var td2 = document.createElement("td");
-            var xVal = i / (points / (2 * xBounds)) - xBounds;
-            var yVal = simplified.evaluate({ x: xVal });
-            td1.innerHTML = String(xVal);
-            td2.innerHTML = yVal;
-            //console.log("td1")
-            //console.log(td1)
-            if (!Number.isNaN(yVal) && yVal !== Infinity && yVal !== -Infinity && yVal.im === undefined) {
-                console.log(yVal)
-                console.log(Number.isNaN(yVal))
-                tr.append(td1);
-                tr.append(td2);
-
-                //console.log("tr")
-                //console.log(tr.innerHTML)
-                table.append(tr);
-                xVals.push(xVal);
-                yVals.push(yVal);
-            }
-
-
-        }
-        //console.log(xVals);
-        //console.log(yVals);
-        //console.log(table.innerHTML);
-        container.append(table);
-        console.log("test after")
-
-    </script>
-    <script type="module">
         import { ParaChart } from '/dist/paracharts.js';
     </script>
     <main>
         <section id="content-container">
-            <para-chart type="line">
+            <para-chart type="graph">
                 <slot id="data">
                 </slot>
             </para-chart>
