Refactored custom element registration to avoid clashes between basic and AI-enhanced versions of ParaCharts

--- a/src/demo/ai/ai.html
+++ b/src/demo/ai/ai.html
@@ -77,7 +77,7 @@
 	<h1>@fizz/paracharts AI-enhanced Demo</h1>
   	<main>
     	<section id="content-container">
-				<para-chart-ai manifest="/src/demo/ai/line-single-manifest-7.json"></para-chart-ai>
+				<para-chart manifest="/src/demo/ai/line-single-manifest-7.json"></para-chart>
 			</section>
   	</main>
 </body>
