--- a/src/demo/ai/ai_live.html
+++ b/src/demo/ai/ai_live.html
@@ -12,7 +12,7 @@
     <main>
       <h1>Line Chart</h1>
 
-      <para-chart-ai manifest="./line-single-manifest-7.json"></para-chart-ai>
+      <para-chart manifest="./line-single-manifest-7.json"></para-chart>
     
     </main>
     
