--- a/src/demo/scrolly/scrolly.html
+++ b/src/demo/scrolly/scrolly.html
@@ -131,7 +131,7 @@
           surpassing industry in 2012, and continuing to widen the gap for the next 6 years.
         </p>
       </div>
-      <div data-para-step="5" data-para-action="highlightDatapoint([Services, 10])">
+      <div data-para-step="5" data-para-action="highlightDatapoint(Services, 10)">
         <p>
           In 2018, services peaked at 52.2% of China's GDP, 11.5% higher than industry and 45% higher than agriculture.
         </p>
