Fix cap box not visible in scrolly.
Closes #753.

--- a/src/demo/scrolly/index.html
+++ b/src/demo/scrolly/index.html
@@ -57,7 +57,7 @@
   </style>
 </head>
 
-<body>    
+<body>
   <h1>GDP Data</h1>
 
   <main class="container">
@@ -109,12 +109,12 @@
     </div>
 
     <section class="chart-area">
-      <para-chart id="main-chart"  manifest="/src/demo-data/china-gdp-line-1.manifest.json"></para-chart>      
-     
+      <para-chart id="main-chart"  manifest="/src/demo-data/china-gdp-line-1.manifest.json"></para-chart>
+
     </section>
   </main>
 
-  <script type="module" src="/dist/paracharts.js"></script>
+  <script type="module" src="/dist-ai/paracharts.js"></script>
 
 </body>
 
