Added basic sonification to declarative scrolly

--- a/src/demo/scrolly/test.html
+++ b/src/demo/scrolly/test.html
@@ -106,12 +106,21 @@
           surpassing industry in 2012, and continuing to widen the gap for the next 6 years.
         </p>
       </div>
-      <div data-para-step="5" data-para-action="setManifest(/src/demo-data/bar-multi-manifest-48.json)">
+      <div data-para-step="5" data-para-action="playSonification(services)">
+        <p>
+          Sonification:  
+          In the decade from 2008 to 2018, China completed its transformation from a largely industrial and maufacturing
+          exporter to a internal economy focused on services for its own population. This is reflected in the
+          fluctuations between industry and services, as relative percentages of the economy, with services finally
+          surpassing industry in 2012, and continuing to widen the gap for the next 6 years.
+        </p>
+      </div>
+      <div data-para-step="6" data-para-action="setManifest(/src/demo-data/bar-multi-manifest-48.json)">
         <p>
           Change chart type
         </p>
       </div>
-      <div data-para-step="5" data-para-action="setColorPalette(pattern)">
+      <div data-para-step="7" data-para-action="setColorPalette(pattern)">
         <p>
           Pattern fills
         </p>
@@ -119,7 +128,7 @@
     </div>
 
     <section class="chart-area">
-      <para-chart id="main-chart"  manifest="/src/demo-data/china-gdp-line-basic.manifest.json"></para-chart>
+      <para-chart id="main-chart"  manifest="/src/demo-data/line-china-gdp-line-basic.manifest.json"></para-chart>
 
     </section>
   </main>
