--- a/src/demo/scrolly/index.html
+++ b/src/demo/scrolly/index.html
@@ -68,7 +68,7 @@
 
   <main class="container">
     <div class="steps">
-      <div id="blank" data-para-enter="">
+      <div id="blank" data-para-enter="reset">
         <p>This is an example of scrollytelling, where the chart stays fixed in place and is updated as the page is
           scrolled. Each paragraph highlights a different aspect of the chart.</p>
       </div>
@@ -84,7 +84,7 @@
       </div>
       <div id="progress" 
         data-para-enter="highlightSeries(Services)"
-        data-para-progress="showProgress(foo)">
+        data-para-progress="progressFade(series='revenue', in=0.2, out=0.8)">
         <p>
           Services expanded relatively quickly and became the largest part of China’s economy by 2018. Starting at
           around 43 percent of GDP in 2008, the sector grew to over half within a decade. This growth came from booming
