--- a/src/demo/scrolly/index.html
+++ b/src/demo/scrolly/index.html
@@ -84,7 +84,7 @@
           focused on urban lifestyles, digital innovation, and internal demand.
         </p>
       </div>
-      <div id="fourth" data-para-enter="highlightSeries(Agriculture)">
+      <div id="fourth" data-para-enter="getSeries(Agriculture).getRecord(5).select() highlightSeries(Services)">
         <p>
           Agriculture's share of China's GDP gradually declined between 2008 and 2018 as the country continued to
           urbanize and modernize. In 2008, agriculture still made up about a tenth of the economy, but by 2018 it had
