fix multiple chained calls in same attribute

--- a/src/demo/scrolly/index.html
+++ b/src/demo/scrolly/index.html
@@ -101,7 +101,8 @@
           surpassing industry in 2012, and continuing to widen the gap for the next 6 years.
         </p>
       </div>
-      <div data-para-step="5" data-para-enter="getSeries(Services).getPoint(5).play() getSeries(Agriculture).getPoint(7).visit()">
+      <div data-para-step="5" 
+        data-para-enter="getSeries(Services).getPoint(5).play() getSeries(Agriculture).getPoint(7).visit()">
         <p>
           In 2018, services peaked at 52.2% of China's GDP, 11.5% higher than industry and 45% higher than agriculture.
         </p>
