Added complex example

--- a/src/demo/scrolly/index.html
+++ b/src/demo/scrolly/index.html
@@ -84,6 +84,12 @@
           focused on urban lifestyles, digital innovation, and internal demand.
         </p>
       </div>
+      <div data-para-step="2.5" 
+        data-para-enter="getSeries(Services, Industry).lowlightOthers() getSeries(Services).getPoint(4).annotate('Service overtakes Industry going forward') getSeries(Services).getPoint(4).play()">
+        <p>
+          Services finally overtook Industry in 2012, and continued growing from there. 
+        </p>
+      </div>
       <div data-para-step="3" data-para-enter="getSeries(Agriculture).lowlightOthers()">
         <p>
           Agriculture's share of China's GDP gradually declined between 2008 and 2018 as the country continued to
