Both scrolly and soni working

--- a/src/demo/scrolly/snakingDemo.html
+++ b/src/demo/scrolly/snakingDemo.html
@@ -67,17 +67,14 @@
 
   <main class="container">
     <div class="steps">
-      <div data-para-step="0" data-para-action="clipWidth(0)"></div>
-      <div data-para-step="1" data-para-action="clipWidth(.1)"></div>
-      <div data-para-step="2" data-para-action="clipWidth(.2)"></div>
-      <div data-para-step="3" data-para-action="clipWidth(.3)"></div>
-      <div data-para-step="4" data-para-action="clipWidth(.4)"></div>
-      <div data-para-step="5" data-para-action="clipWidth(.5)"></div>
-      <div data-para-step="6" data-para-action="clipWidth(.6)"></div>
-      <div data-para-step="7" data-para-action="clipWidth(.7)"></div>
-      <div data-para-step="8" data-para-action="clipWidth(.8)"></div>
-      <div data-para-step="9" data-para-action="clipWidth(.9)"></div>
-      <div data-para-step="10" data-para-action="clipWidth(1)"></div>
+      <div data-para-step="0" data-para-action="clipTo(Agriculture, 0)"></div>
+      <div data-para-step="1" data-para-action="clipTo(Agriculture, 1)"></div>
+      <div data-para-step="2" data-para-action="clipTo(Agriculture, 2)"></div>
+      <div data-para-step="3" data-para-action="clipTo(Agriculture, 4)"></div>
+      <div data-para-step="4" data-para-action="clipTo(Agriculture, 5)"></div>
+      <div data-para-step="5" data-para-action="clipTo(Agriculture, 2)"></div>
+      <div data-para-step="6" data-para-action="clipTo(Agriculture, 6)"></div>
+      <div data-para-step="6" data-para-action="clipTo(Agriculture, 10)"></div>
       <!--
         <div data-para-step="11" data-para-action="clipWidth(110)"></div>
       <div data-para-step="12" data-para-action="clipWidth(120)"></div>
