Quasi-fix headless demo.

--- a/src/demo/headless/index.html
+++ b/src/demo/headless/index.html
@@ -50,7 +50,7 @@
 
 <body>
   <script type="module">
-    import { ParaHeadless } from '/dist/paracharts.js';
+    import { ParaHeadless } from '/dist-ai/paracharts.js';
 
     const container = document.getElementById('content-container');
     const jim = document.getElementById('jim');
