Fixed slotloaded charts

--- a/src/demo/datatable/datatable-bar-1018-demo.html
+++ b/src/demo/datatable/datatable-bar-1018-demo.html
@@ -19,6 +19,11 @@
       font-weight: 300;
     }
 
+    #content-container {
+			--para-stroke-width: 20;
+			width: 600px;
+		}
+
     h1 {
       position: fixed;
       bottom: 0;
