--- a/src/demo/datatable/datatable-line-multi-27-demo.html
+++ b/src/demo/datatable/datatable-line-multi-27-demo.html
@@ -18,6 +18,11 @@
       color: #333;
       font-weight: 300;
     }
+    
+    #content-container {
+			--para-stroke-width: 20;
+			width: 600px;
+		}
 
     h1 {
       position: fixed;
