Fixed NHL and scrollyteller popups

--- a/src/demo/performer/index.html
+++ b/src/demo/performer/index.html
@@ -124,11 +124,11 @@
                 },*/
                 /*() => {
 					text.innerHTML = 'Play point sonification';
-                    chart.api.getSeries('China').getPoint(6).play();
+                    chart.api.getSeries('China').getPoints(6).play();
                 },
                 () => {
 					text.innerHTML = 'Annotate point';
-                    chart.api.getSeries('China').getPoint(6).annotate('Foobar');
+                    chart.api.getSeries('China').getPoints(6).annotate('Foobar');
                 },
                 () => {
 					text.innerHTML = 'Lowlight other series';
