--- a/src/demo/scrolly/index.html
+++ b/src/demo/scrolly/index.html
@@ -85,7 +85,7 @@
         </p>
       </div>
       <div data-para-step="2.5" 
-        data-para-enter="getSeries(Services, Industry).lowlightOthers() getSeries(Services).getPoint(4).annotate('Service overtakes Industry going forward') getSeries(Services).getPoint(4).play()">
+        data-para-enter="getSeries(Services, Industry).lowlightOthers() getSeries(Services).getPoints(4).annotate('Service overtakes Industry going forward') getSeries(Services).getPoints(4).play()">
         <p>
           Services finally overtook Industry in 2012, and continued growing from there. 
         </p>
@@ -108,7 +108,7 @@
         </p>
       </div>
       <div data-para-step="5" 
-        data-para-enter="getSeries(Services).getPoint(5).play() getSeries(Agriculture).getPoint(7).visit()">
+        data-para-enter="getSeries(Services).getPoints(5).play() getSeries(Agriculture).getPoints(7).visit()">
         <p>
           In 2018, services peaked at 52.2% of China's GDP, 11.5% higher than industry and 45% higher than agriculture.
         </p>
