--- a/src/demo/scrolly/snakingDemo.html
+++ b/src/demo/scrolly/snakingDemo.html
@@ -71,15 +71,15 @@
 
   <main class="container">
     <div class="steps">
-      <div data-para-enter="getSeries(Services).getPoint(0).clipTo()">
+      <div data-para-enter="getSeries(Services).getPoints(0).clipTo()">
         <p>This is an example of scrollytelling, where the chart stays fixed in place and is updated as the page is
           scrolled. Each paragraph highlights a different aspect of the chart.</p>
       </div>
-      <div data-para-enter="getSeries(Services).getPoint(0).clipTo()">
+      <div data-para-enter="getSeries(Services).getPoints(0).clipTo()">
         <p>This is an example of scrollytelling, where the chart stays fixed in place and is updated as the page is
           scrolled. Each paragraph highlights a different aspect of the chart.</p>
       </div>
-      <div data-para-enter="getSeries(Services).getPoint(1).clipTo()">
+      <div data-para-enter="getSeries(Services).getPoints(1).clipTo()">
         <p>Industry remained a major part of China’s economy during this period but also saw a gradual decline in its
           share of GDP. In 2008, industry contributed nearly half of total output, driven by China’s role as the world’s
           main manufacturing hub. Over the decade, however, the share dropped to about 40 percent. Rising labor costs,
@@ -87,7 +87,7 @@
           government began encouraging innovation and advanced manufacturing, but overall, the relative dominance of
           heavy industry and export-driven production started to ease.</p>
       </div>
-      <div data-para-enter="getSeries(Services).getPoint(2).clipTo()">
+      <div data-para-enter="getSeries(Services).getPoints(2).clipTo()">
         <p>
           Services expanded relatively quickly and became the largest part of China’s economy by 2018. Starting at
           around 43 percent of GDP in 2008, the sector grew to over half within a decade. This growth came from booming
@@ -97,17 +97,17 @@
           focused on urban lifestyles, digital innovation, and internal demand.
         </p>
       </div>
-      <div data-para-enter="getSeries(Services).getPoint(3).clipTo()">
+      <div data-para-enter="getSeries(Services).getPoints(3).clipTo()">
         <p>
           Services finally overtook Industry in 2012, and continued growing from there.
         </p>
       </div>
-      <div  data-para-enter="getSeries(Services).getPoint(4).clipTo()">
+      <div  data-para-enter="getSeries(Services).getPoints(4).clipTo()">
         <p>
           Services finally overtook Industry in 2012, and continued growing from there.
         </p>
       </div>
-      <div data-para-enter="getSeries(Services).getPoint(5).clipTo()">
+      <div data-para-enter="getSeries(Services).getPoints(5).clipTo()">
         <p>
           Agriculture's share of China's GDP gradually declined between 2008 and 2018 as the country continued to
           urbanize and modernize. In 2008, agriculture still made up about a tenth of the economy, but by 2018 it had
@@ -116,7 +116,7 @@
           increasingly mechanized and productive, even as it accounted for a smaller slice of total output.
         </p>
       </div>
-      <div data-para-enter="getSeries(Services).getPoint(6).clipTo()">
+      <div data-para-enter="getSeries(Services).getPoints(6).clipTo()">
         <p>
           In the decade from 2008 to 2018, China completed its transformation from a largely industrial and maufacturing
           exporter to a internal economy focused on services for its own population. This is reflected in the
@@ -125,7 +125,7 @@
         </p>
       </div>
       <div
-        data-para-enter="getSeries(Services).getPoint(10).clipTo()">
+        data-para-enter="getSeries(Services).getPoints(10).clipTo()">
         <p>
           In 2018, services peaked at 52.2% of China's GDP, 11.5% higher than industry and 45% higher than agriculture.
         </p>
