Fixed vite demo

--- a/src/demo/headless/vite/headless.html
+++ b/src/demo/headless/vite/headless.html
@@ -49,7 +49,7 @@
 </head>
 
 <body>
-  <script type="module" src="/src/demo/headless/vite/demo.ts"></script>
+  <script type="module" src="./demo.ts"></script>
   <h1>ParaCharts Headless</h1>
   <main>
     <header>
