--- a/src/demo/scrolly/index.html
+++ b/src/demo/scrolly/index.html
@@ -50,7 +50,7 @@
       margin-bottom: 5em;
     }
 
-    [data-para-step="5"] {
+    [data-para-step="6"] {
       margin-top: 5em;
       margin-bottom: 12em;
     }
@@ -111,6 +111,12 @@
         data-para-enter="getSeries(Services).getPoints(5).play() getSeries(Agriculture).getPoints(7).visit()">
         <p>
           In 2018, services peaked at 52.2% of China's GDP, 11.5% higher than industry and 45% higher than agriculture.
+        </p>
+      </div>
+      <div data-para-step="6" 
+        data-para-enter="setManifest(/src/demo-data/bar-multi-manifest-48.json)">
+        <p>
+          Change chart.
         </p>
       </div>
     </div>
