--- a/src/demo/datatable/datatable-pastry-47-demo.html
+++ b/src/demo/datatable/datatable-pastry-47-demo.html
@@ -53,7 +53,7 @@
   </script>
   <main>
     <section id="content-container">
-      <para-chart type="pie">
+      <para-chart type="donut">
       </para-chart>
     </section>
   </main>
